plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'jacoco'
	id 'checkstyle'
}

group = 'com.cf'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

checkstyle {
	toolVersion = '10.3'
	configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
}

dependencies {
	// spring
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// db
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.liquibase:liquibase-core:4.29.2'
	implementation 'org.postgresql:postgresql:42.7.4'

	// lombok
	implementation 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	//    jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// cache
	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

	// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.testcontainers:junit-jupiter:1.20.1'
	testImplementation 'org.wiremock:wiremock-standalone:3.9.1'
	testImplementation 'org.wiremock.integrations.testcontainers:wiremock-testcontainers-module:1.0-alpha-14'
	testImplementation 'org.testcontainers:postgresql:1.20.3'
	testImplementation 'org.liquibase:liquibase-core:4.29.2'
	testImplementation 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.test {
	jvmArgs '-XX:+EnableDynamicAgentLoading'
	systemProperty "spring.profiles.active", "test"
}

jacocoTestReport {
	reports {
		html.required = true
		xml.required  = true
	}
}